<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/menuzao_not"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_not" />

    <Button
        android:id="@+id/menuzao_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_sync" />

    <Button
        android:id="@+id/menuzao_opcoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_opcoes" />

    <Button
        android:id="@+id/menuzao_sair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_sair" />

</LinearLayout>